update now playing bar css

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/nowplayingbar.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/nowplayingbar.css
@@ -194,7 +194,7 @@
 
 .nowPlayingBarPositionSlider #sliderContainer {
     width: 100%;
-    margin-left: -15px;
+    margin-left: 0 !important;
 }
 
 .nowPlayingBarPositionSlider #sliderKnob {
