fix recording alignment

--- a/MediaBrowser.WebDashboard/dashboard-ui/components/recordingcreator/recordingcreator.template.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/components/recordingcreator/recordingcreator.template.html
@@ -7,7 +7,7 @@
 
 <form class="liveTvNewRecordingForm" style="margin: 0 auto;">
 
-    <div style="text-align: right;">
+    <div style="text-align: right; display: flex; justify-content: flex-end;">
         <paper-toggle-button class="chkAdvanced">${ButtonAdvanced}</paper-toggle-button>
     </div>
 
@@ -16,7 +16,7 @@
     <p class="itemMiscInfo"></p>
 
     <br />
-   <div style="display: none;" id="eligibleForSeriesFields">
+    <div style="display: none;" id="eligibleForSeriesFields">
         <div>
             <paper-checkbox id="chkRecordSeries">${OptionRecordSeries}</paper-checkbox>
         </div>
